# mentoring

./: .dockerignore  CLAUDE.md
.claude/: settings.local.json
churn-app/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
churn-app/app/: const.py  main.py
churn-app/app/helpers/: message_categorizer.py
churn-app/app/models/: ollama.py  openai.py
churn-app/app/routers/: chat.py  file.py  hello.py  upload.py
churn-app/app/services/: chat_service.py  current_section.md  document_processor.py  file_process.py  file_save.py  file_storage.py  greeter.py  llm_service.py  ollama_service.py  qdrant.py  qdrant_service.py  upload_service.py
churn-app/front/: app.py
churn-lib/: pyproject.toml
churn-lib/src/churn_lib/: __init__.py  preprocessing.py
churn-lib/src/churn_lib/mulvis/: index.py
