[project]
name = "churn-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "matplotlib>=3.10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
